--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,63 +1,58 @@
 <div class="inicio">
-    <div class="txtinicio">English online courses with chat.
-      <br>The most comfortable way to learn.</div>
-    <div class="overlayinicio"></div><img class="imginicio" sizes="100vw" src="images/fotoInicio2.jpg" srcset="images/fotoInicio2-p-500x157.jpeg 500w, images/fotoInicio2-p-800x250.jpeg 800w, images/fotoInicio2-p-1600x500.jpeg 1600w, images/fotoInicio2.jpg 1920w">
-    <div class="div-block">
-      <a class="linklogin w-inline-block" data-ix="botonlogin" href="#"><img src="images/iconoLogin.png" width="20">
-        <div class="txtlogin">Login</div>
-      </a><a class="contactinicio w-button" href="#">Contact Us</a>
-    </div>
-  </div>
-  <div class="inicio2">
-    <div class="w-row">
-      <div class="w-col w-col-4">
-        <div class="divicono"><img class="imgicono" src="images/auriculares.png" width="103">
-          <h2 class="titicono">Heading</h2>
-          <div class="parricono">This is some text inside of a div block.</div>
-        </div>
-      </div>
-      <div class="w-col w-col-4">
-        <div class="divicono"><img class="imgicono" src="images/charla.png" width="103">
-          <h2 class="titicono">Heading</h2>
-          <div class="parricono">This is some text inside of a div block.</div>
-        </div>
-      </div>
-      <div class="w-col w-col-4">
-        <div class="divicono"><img class="imgicono" src="images/flechas.png" width="103">
-          <h2 class="titicono">Heading</h2>
-          <div class="parricono">This is some text inside of a div block.</div>
-        </div>
+  <div class="txtinicio">English online courses with chat.<br>The most comfortable way to learn.</div>
+  <div class="overlayinicio"></div><img src="images/fotoInicio2.jpg" srcset="images/fotoInicio2-p-500x157.jpeg 500w, images/fotoInicio2-p-800x250.jpeg 800w, images/fotoInicio2-p-1600x500.jpeg 1600w, images/fotoInicio2.jpg 1920w" sizes="100vw" class="imginicio">
+  <div class="div-block"><a href="#" data-ix="botonlogin" class="linklogin w-inline-block"><img src="images/iconoLogin.png" width="20"><div class="txtlogin">Login</div></a><a href="#" class="contactinicio w-button">Contact Us</a></div>
+</div>
+<div class="inicio2">
+  <div class="w-row">
+    <div class="w-col w-col-3">
+      <div class="divicono"><img src="images/auriculares.png" width="103" class="imgicono">
+        <h2 class="titicono">We flex.</h2>
+        <div class="parricono">Your classes are easy to follow on a trip or time difference zone.</div>
       </div>
     </div>
-  </div>
-  <div class="inicio3">
-    <div class="w-row">
-      <div class="w-col w-col-6"></div>
-      <div class="w-clearfix w-col w-col-6">
-        <div class="_3 txtinicio">English online courses with chat.</div>
-        <p class="parrinicio3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p><a class="contactinicio relative w-button" href="#">More about Connections</a>
+    <div class="w-col w-col-3">
+      <div class="divicono"><img src="images/charla.png" width="103" class="imgicono">
+        <h2 class="titicono">We focus.</h2>
+        <div class="parricono">Our standards and material will enable you to have an international exam certification. We don’t randomize.<br> We offer a content-based syllabus that is aligned with your linguistic goals.</div>
+      </div>
+    </div>
+    <div class="w-col w-col-3">
+      <div class="divicono"><img src="images/flechas.png" width="103" class="imgicono">
+        <h2 class="titicono">We connect.</h2>
+        <div class="parricono">We help you reach there. We prep IELTS for international study, migration or work purposes.<br> You have a space to brush up on your oral presentations or job interviews.</div>
+      </div>
+    </div>
+    <div class="w-col w-col-3">
+      <div class="divicono"><img src="images/premio.png" width="103" class="imgicono">
+        <h2 class="titicono">We are real.</h2>
+        <div class="parricono">And realistic. We have proven +20 experience in EFL learning. We offer realistic results because we are real,<br> graduates from the best teaching institutions and ready to serve you at the appointed time.</div>
       </div>
     </div>
   </div>
-  <div class="nos">
-    <div class="w-row">
-      <div class="w-col w-col-4">
-        <div class="divnos"><img class="imgnos" src="images/ingNos.png">
-          <blockquote class="quote">Block Quote
-            <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</blockquote>
-        </div>
+</div>
+<div class="inicio3 w-clearfix">
+  <div class="txtinicio _3">English online courses.</div>
+  <p class="parrinicio3">Born an audio-visual company, Connections has expanded their services to meet new challenges:<br>Online solutions for people who need to max their language performance.<br> Besides our well-known language audit services and training courses on translation and English, we have designed a solid learning tool for English learners.<br><br> Our courses are delivered:<br>  • Fully online, recommended for participants with + B1 level.<br>  • As a blended learning support for face-to-face instruction. An appointed instructor will provide downloadable offline learning material along with each online learning course.<br>  • By the same instructor all along, who will monitor your speaking skills through voice chat.</p><a href="#" class="contactinicio relative w-button">More about Connections</a></div>
+<div class="nos">
+  <div class="w-row">
+    <div class="w-col w-col-4">
+      <div class="divnos"><img src="images/flor.png" class="imgnos">
+        <div class="nombrestaff">María Florencia Ferreri</div>
+        <blockquote class="quote">English and Spanish teacher and translator. Experience in blended learning (flipped classroom) and<br> distance education using learning platforms and videoconferencing. Experience in teaching business<br> English, tailoring classes and preparing students for international language exams.</blockquote>
       </div>
-      <div class="w-col w-col-4">
-        <div class="divnos"><img class="imgnos" src="images/ingNos.png">
-          <blockquote class="quote">Block Quote
-            <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</blockquote>
-        </div>
+    </div>
+    <div class="w-col w-col-4">
+      <div class="divnos"><img src="images/grace.png" class="imgnos">
+        <div class="nombrestaff">Graciela Cuello</div>
+        <blockquote class="quote"> English instructor and translator specialized on accesible translation and<br> captioning for the deaf-and-hard-of hearing.</blockquote>
       </div>
-      <div class="w-col w-col-4">
-        <div class="divnos"><img class="imgnos" src="images/ingNos.png">
-          <blockquote class="quote">Block Quote
-            <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</blockquote>
-        </div>
+    </div>
+    <div class="w-col w-col-4">
+      <div class="divnos"><img src="images/you.png" class="imgnos">
+        <div class="nombrestaff">You</div>
+        <blockquote class="quote">You will have monitored access to fully integrated lessons. A certified instructor will help you articulate both<br> the face-to-face class and the online lesson to get the best result.</blockquote>
       </div>
     </div>
   </div>
+</div>
